@@ -539,7 +539,6 @@ argument_list|)
 expr_stmt|;
 block|}
 specifier|private
-specifier|final
 name|ObjectNameGenerator
 name|nameGenerator
 decl_stmt|;
@@ -2367,6 +2366,21 @@ name|rel
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+specifier|public
+name|void
+name|setNameGenerator
+parameter_list|(
+name|ObjectNameGenerator
+name|nameGenerator
+parameter_list|)
+block|{
+name|this
+operator|.
+name|nameGenerator
+operator|=
+name|nameGenerator
+expr_stmt|;
 block|}
 block|}
 end_class
