@@ -57,9 +57,39 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|dbsync
+operator|.
+name|naming
+operator|.
+name|DefaultObjectNameGenerator
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|map
 operator|.
 name|DbEntity
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|DbRelationship
 import|;
 end_import
 
@@ -264,13 +294,13 @@ name|ActionEvent
 name|e
 parameter_list|)
 block|{
-name|synchDbEntity
+name|syncDbEntity
 argument_list|()
 expr_stmt|;
 block|}
 specifier|protected
 name|void
-name|synchDbEntity
+name|syncDbEntity
 parameter_list|()
 block|{
 name|ProjectController
@@ -349,6 +379,15 @@ condition|)
 block|{
 return|return;
 block|}
+name|merger
+operator|.
+name|setNameGenerator
+argument_list|(
+operator|new
+name|PreserveRelationshipNameGenerator
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|DbEntitySyncUndoableEdit
 name|undoableEdit
 init|=
@@ -477,6 +516,85 @@ argument_list|(
 name|undoableEdit
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+specifier|static
+class|class
+name|PreserveRelationshipNameGenerator
+extends|extends
+name|DefaultObjectNameGenerator
+block|{
+annotation|@
+name|Override
+specifier|public
+name|String
+name|relationshipName
+parameter_list|(
+name|DbRelationship
+modifier|...
+name|relationshipChain
+parameter_list|)
+block|{
+if|if
+condition|(
+name|relationshipChain
+operator|.
+name|length
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+name|super
+operator|.
+name|relationshipName
+argument_list|(
+name|relationshipChain
+argument_list|)
+return|;
+block|}
+name|DbRelationship
+name|last
+init|=
+name|relationshipChain
+index|[
+name|relationshipChain
+operator|.
+name|length
+operator|-
+literal|1
+index|]
+decl_stmt|;
+comment|// must be in sync with DefaultBaseNameVisitor.visitDbRelationship
+if|if
+condition|(
+name|last
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|startsWith
+argument_list|(
+literal|"untitledRel"
+argument_list|)
+condition|)
+block|{
+return|return
+name|super
+operator|.
+name|relationshipName
+argument_list|(
+name|relationshipChain
+argument_list|)
+return|;
+block|}
+comment|// keep manually set relationship name
+return|return
+name|last
+operator|.
+name|getName
+argument_list|()
+return|;
 block|}
 block|}
 block|}
