@@ -296,13 +296,13 @@ name|ActionEvent
 name|e
 parameter_list|)
 block|{
-name|synchObjEntity
+name|syncObjEntity
 argument_list|()
 expr_stmt|;
 block|}
 specifier|protected
 name|void
-name|synchObjEntity
+name|syncObjEntity
 parameter_list|()
 block|{
 name|ProjectController
@@ -362,6 +362,17 @@ condition|)
 block|{
 return|return;
 block|}
+name|merger
+operator|.
+name|setNameGenerator
+argument_list|(
+operator|new
+name|DbEntitySyncAction
+operator|.
+name|PreserveRelationshipNameGenerator
+argument_list|()
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|merger
